# Smart_Home_v2.0

./: .gitignore  README.md
Documentos/Distribucion_pines_ESP32/: Distribucion_Pines_ESP32.xlsx  ~$Distribucion_Pines_ESP32.xlsx
Documentos/PCB/BOOM_de_materiales/: CircuitoPCB.csv
codigos/: README.md
codigos/Entorno_Virtual/: requirements.txt
codigos/Esclavo_ESP32/: README.md
codigos/Esclavo_ESP32/Firmware_ESP32/: CMakeLists.txt  README.md
codigos/Esclavo_ESP32/Firmware_ESP32/Inc/: config_usuario.h  configuracion.h  control_garaje.h  control_global.h  control_interior.h  driver_fc28.h  entradas_fisicas.h  memoria_nvs.h  portal_wifi.h  tareas_sistema.h  wifi_mqtt.h
codigos/Esclavo_ESP32/Firmware_ESP32/Src/: actuadores.c  control_dimmer.c  control_global.c  control_interior.c  driver_dht22.c  driver_fc28.c  entradas_fisicas.c  main.c  memoria_nvs.c  portal_wifi.c  tareas_sistema.c  wifi_mqtt.c
codigos/Firmware_ESP32/: idf_component.yml
codigos/Firmware_ESP32/Inc/: actuadores.h  configuracion.h  control_dimmer.h  driver_dht22.h
codigos/Firmware_ESP32/Src/: config_usuario.c  control_garaje.c  control_global.c  portal_wifi.c  wifi_mqtt.c
codigos/Interfaz_de_usuario/static/: app.js  styles.css
codigos/Maestro_Raspberry/: README.md
codigos/Maestro_Raspberry/Entorno_Virtual/: requirements.txt
codigos/Maestro_Raspberry/Interfaz_de_usuario/: README.md  app.py  (+1 more)
codigos/Sistema_Inteligente/: ejecutar_smart_manual.sh  enviar_predicciones_ESP32.py
codigos/Vision_Laptop/: config_laptop.json  mqtt_percepcion.py  percepcion_vision.py  simular_percepcion.py
(+25 files in other folders)
